# MRT_Assignments

./: README.md
Assignment_1/: Assignment.py  README.md
Assignment_2/: README.md
Assignment_2/collection_soil/collection_soil/: collection_service.py
Assignment_2/mars_msgs/: CMakeLists.txt
Assignment_2/mars_srv/: CMakeLists.txt  package.xml
Assignment_2/mars_srv/srv/: Location.srv
Assignment_2/rover_movement/: package.xml  setup.cfg  setup.py
Assignment_2/rover_odometry/: package.xml  setup.py
Assignment_2/rover_odometry/rover_odometry/: rover_odo_pub.py  rover_odo_sub.py
Assignment_2/rover_status/: package.xml
Assignment_2/rover_status/rover_status/: battery_sub.py
Assignment_3/: CMakeLists.txt  lidar_node.cc  rover.sdf  rover_launch.ign  twist_publisher.cpp
collection_soil/: package.xml  setup.cfg  setup.py
collection_soil/collection_soil/: collection_client.py  rover_collection.py
mars_msgs/: package.xml
mars_msgs/msg/: RoverOdometry.msg
rover_movement/rover_movement/: obstacle_map_pub.py  obstacles.py  rover_nav.py
rover_odometry/: setup.cfg
rover_status/: setup.cfg  setup.py
rover_status/rover_status/: battery_health.py  battery_temp_pub.py
