<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>collection_soil</name>
  <version>0.0.0</version>
  <description>Rover Soil Collection Package</description>
  <maintainer email="tejaskulkarni785@gmail.com">tejas</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>mars_srv</depend>
<depend>rclpy</depend>
<depend>random</depend>
<depend>functools</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
